core/app/assets/stylesheets/refinery/sections/_layout.scss
/* ... */
.visual_editor_dialog_table {
  height: 250px;
}
.no_picked_image_selected {@include icon('warning', $icon_warning_colour)}
.dialog {
  #dialog_main {
    float: left;
    margin-left: 130px;
    min-height: 405px;
    width: 696px;
  }
  span.radio {
    display: block;
    line-height: 18px;
    padding: 6px 0px;
  }
  span.radio * {
    cursor: pointer;
    font-weight: bold;
  }
  #dialog_menu_left {
    position: fixed;
    left: 12px;
    top: 9px;
    width: 130px;
  }
  #existing_image_content {
    position: relative;
    height: 300px;
    padding: 12px;
  }
  #existing_image_area_content {
    margin-top: 28px;
    ul {
      margin: 0px;
      padding: 0px;
      li {
        list-style: none;
        padding: 0px;
        margin: 0px 2px 0px 0px;
        float: left;
        height: 114px;
        max-height: 114px;
        width: 114px;
        max-width: 114px;
        overflow: hidden;
        cursor: pointer;
        text-align: center;
        vertical-align: middle;
        img {
          border: 4px solid transparent;
        }
        &.selected img {
          border: 4px solid #22A7F2;
        }
      }
    }
  }
  #existing_image_size_area {
    margin-top: 18px;
    ul {
      margin: 0px;
      padding: 10px 0px 0px 0px;
      li {
        float: left;
        list-style: none;
        margin: 0px 18px 0px 0px;
        text-align:center;
        a {
          display: block;
          border: 1px solid #999999;
          font-size: 10px;
        }
        &.selected {
          a {
            border-color: #22A7F2;
            background: #22A7F2;
            color: white;
            font-weight: bold;
          }
        }
      }
    }
  }
  #existing_image_size_area {
    #image_dialog_size_0 a { height: 30px; width: 30px; line-height: 30px; margin-top: 10px }
    #image_dialog_size_1 a { height: 50px; width: 50px; line-height: 50px; margin-top:  0px }
    #image_dialog_size_2 a { height: 70px; width: 70px; line-height: 70px; margin-top:-10px }
    #image_dialog_size_3 a { height: 90px; width: 90px; line-height: 90px; margin-top:-20px }
  }
  #content {
    padding: 0px;
  }
}
#upload_image_area, #upload_resource_area {
  padding: 12px;
}
.visual_editor_dialog #page {
  width: 940px;
  padding: 6px;
}
#dialog_main {
  .pagination {
    margin: 0px;
    position: fixed;
    bottom: 5px;
    right: 12px;
    z-index: 1000;
  }
  .pages_list {
    width: 100%;
    padding-bottom: 40px;
    ul {
      margin: 0px 12px 0px 12px;
      padding: 0px;
      li {
        cursor: pointer;
        line-height: 24px;
        list-style: none;
        a {
          display: block;
          padding: 3px 3px 3px 27px;
          text-decoration: none;
          border-bottom: none;
          border: 1px solid transparent;
        }
        &:hover {
          background-color: #C9DAE2;
        }
      }
      li.child a {
        padding-left: 27px;
      }
      li.child1 a {
        padding-left: 47px;
      }
      li.child2 a {
        padding-left: 67px;
      }
      li.child3 a {
        padding-left: 87px;
      }
      li.child4 a {
        padding-left: 107px;
      }
    }
  }
  .actions {
    margin-right: 48px;
  }
  .pages_list .linked a, .pages_list .linked a:hover {
    border: 1px solid #00A017;
    color: #00A017;
    @include icon('check-circle', green);
  }
  .pages_list .linked a em {
    color: #00A017;
  }
  #web_address_area, #dialog_main #email_address_area {
    padding: 12px;
  }
}
#link_title {
  margin-top: 12px;
  label {
    margin: 3px 0px 0px 0px !important;
    width: 130px;
    display: block;
    float: left;
  }
  input {
    width: 770px;
  }
}
ul#menu.reordering_menu li a {
  cursor: move;
}
#search {
  border: 1px solid #b3b3b3;
  line-height: 18px;
  padding: 2px;
  font-size: 16px;
  width: 10em;
}
.cancel-search {
  float: right;
}
.pt-BR #search {
  width: 107px;
}
.en #search {
  width: 130px;
}
.search_form {
  position: relative;
  .button, .button-wrapper {
    position: absolute;
    right: 0px;
    top: 2px;
  }
}
form input[type=submit]:hover {
  background: #65c3f7;
}
.clearfix:after {
  content:".";
  display:block;
  height:0;
  clear:both;
  visibility:hidden;
}
.clearfix {display:inline-block;}
/* Hide from IE Mac \*/
.clearfix {display:block;}
/* End hide from IE Mac */
/*
Firefox Dotted Line Fix
  - http://sonspring.com/journal/removing-dotted-links
*/
a:focus {
  outline: none;
}
a img {
  border: 0px none;
}

/* page parts */
ul#page_parts {
  float: left;
  width: 92%;
}
ul#page_parts, ul#page_parts_controls {
  margin: 0;
  padding: 0;
}
ul#page_parts_controls {
  float: right;
  margin: 20px 3px 0 0;
}
ul#page_parts_controls li {
  list-style: none;
  float: right;
  margin: 0 3px;
}
ul#page_parts_controls li a {
  border: 0px none;
}
ul#page_parts_controls img {
  vertical-align: middle;
}
#page-tabs.ui-sortable.reordering {
  li {
    cursor: move;
    a {
      cursor: move;
    }
  }
}
#page_part_editors {
  clear:left;
}

/* dialog stuff */
#dialog_frame {
  width:952px;
  height:460px;
  padding: 0px;
  border: 0px solid #F2F1ED;
}
.visual_editor_hideables {
  display: none;
}
#content .form-actions, .wym_dialog .form-actions, .ui-dialog .form-actions {
  @include form-actions;
}
.dialog form {
  margin-bottom: 45px;
}
.dialog .dialog_area > div > .field label:first-child, .dialog .dialog_area > div > label:first-child {
  margin-top: 0px;
}
.visual_editor_dialog .form-actions, #content.form-actions.dialog-form-actions, .ui-dialog .form-actions {
  margin-top: 16px;
}
#content .form-actions .form-actions-left, #content .form-actions .form-actions-right,
  .visual_editor_dialog .form-actions .form-actions-left, .visual_editor_dialog .form-actions .form-actions-right,
  .ui-dialog .form-actions .form-actions-left, .ui-dialog .form-actions .form-actions-right {
  position: absolute;
  top: 10px;
}
/* ... */

